# cppize-engine

./: CMakeLists.txt  README.md
core/src/pize-core/: Pize.cpp  pize.cpp
core/src/pize-core/app/: AppAdapter.cpp  Context.cpp
core/src/pize-core/context/: Context.cpp  ContextListener.cpp  context.cpp
core/src/pize-core/graphics/gl/: BufferUsage.cpp  Format.cpp  Primitive.cpp  SizedFormat.cpp  Type.cpp
core/src/pize-core/graphics/mesh/: ElementBuffer.cpp  VertexArray.cpp  VertexAttr.cpp  VertexBuffer.cpp
core/src/pize-core/graphics/texture/: Pixmap.cpp  Texture.cpp
core/src/pize-core/graphics/util/: Shader.cpp
core/src/pize-core/io/: Keyboard.cpp  Window.cpp  keyboard.cpp  window.cpp
core/src/pize-core/io/window/: Resizable.cpp  Window.cpp
core/src/pize-core/math/vecmath/matrix/: Matrix4f.cpp
core/src/pize-core/util/time/: DeltaTimeCounter.cpp  FpsCounter.cpp  Time.cpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
resources/: text.txt
resources/shader/: shader.frag  shader.vert
src/pize/core/: pize.cpp
src/pize/core/context/: context.cpp  context_listener.cpp
src/pize/core/io/: keyboard.cpp
src/pize/test/: main.cpp
tests/test-window/src/: Main.cpp  main.cpp
